# multithreaded-sort

./: CMakeLists.txt  README.txt
src/: sort.c
